# sdsl-bench

./: CMakeLists.txt  README.md  build.sh  cleanup.sh
bench/: CMakeLists.txt
bench/include/: bench.h
bench/src/: bench.cc  bench_arr.cc
construct/: CMakeLists.txt
construct/src/: construct.cc
